--- a/client/src/components/Footer/styles.module.css
+++ b/client/src/components/Footer/styles.module.css
@@ -25,3 +25,18 @@
 
     margin-left: 20px;
 }
+
+.wrapper {
+    position: relative;
+    min-height: 100%;
+}
+.content {
+    padding-bottom: 90px;
+}
+.footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+}
