--- a/client/src/components/FormAuth/loginstyle.css
+++ b/client/src/components/FormAuth/loginstyle.css
@@ -81,7 +81,7 @@ form .form-inner h2 {
    box-shadow: 0px 0px 3px rgba( 0, 0, 0, 0.2);
  }
 
- form .form-inner input [type="submit"] {
+ form .form-inner button {
    display: inline-block;
    padding: 10px 15px;
    border-radius: 8px;
