--- a/client/src/components/Profile/profile.css
+++ b/client/src/components/Profile/profile.css
@@ -91,6 +91,12 @@ label .progress::after {
   width: 100%;
   border-radius: 10%;
 } 
+
+button {
+  border: 1px solid blue;
+  padding: 5px;
+  cursor: pointer;
+}
 /* .img-wrapper {
   background: #fff;
   border-radius: 15px;
@@ -98,6 +104,7 @@ label .progress::after {
   width: 100%;
   padding: 25px;
 }
+
 
 
 /* calc(1% * var(--w)); */
