--- a/client/src/components/Navbar/styles.module.css
+++ b/client/src/components/Navbar/styles.module.css
@@ -6,7 +6,7 @@ li, Link {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
-    color: #edf0f1;
+    color: #01012b;
     text-decoration: none;
 }
 
