--- a/client/src/components/FormAuth/loginstyle.css
+++ b/client/src/components/FormAuth/loginstyle.css
@@ -28,7 +28,7 @@ form::after {
   right: -5px;
   bottom: -5px;
   z-index: 1;
-  background-image: linear-gradient(to bottom right, #ffce00, #fe4880 );
+  background-image: linear-gradient(to bottom right, #e232b3, #44d7f9 );
 }
 
 form .form-inner {
@@ -64,7 +64,7 @@ form .form-inner h2 {
  }
 
  .form-inner .form-group:focus-within label {
-   color: #fe4880;
+   color: #4421aa;
  }
 
  form .form-inner .form-group input {
@@ -85,7 +85,7 @@ form .form-inner h2 {
    display: inline-block;
    padding: 10px 15px;
    border-radius: 8px;
-   background-image: linear-gradient(to right, #ffce00 50%, #ffce00 50%, #fe4880 );
+   background-image: linear-gradient(to right, #ffce00 50%, #ffce00 50%, #44d7f9 );
    background-size: 200%;
    background-position: 0%;
    transition: 0.4s;
