--- a/client/src/components/Footer/footerStyles.module.css
+++ b/client/src/components/Footer/footerStyles.module.css
@@ -1,14 +1,31 @@
 .wrapper {
-    position: relative;
-    min-height: 100%;
-}
-.content {
-    padding-bottom: 90px;
-}
-.footer {
-    position: absolute;
-    left: 0;
+    position: fixed;
+    height: 60px;
     bottom: 0;
     width: 100%;
-    height: 80px;
+    background: black;
+    display: flex;
+    box-shadow: 0px -15px 30px rgba(255, 0, 191, 0.20);
 }
+
+
+.tag {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 30px;
+    margin: auto 30px auto;
+}
+
+.tag span {
+    margin: auto 0 auto;
+}
+
+.icons {
+    display: flex;
+    width: 15%;
+    margin: auto 0 auto;
+    justify-content: space-around;
+}
+
