styles and discord bot

--- a/client/src/components/GroupDetail/detailedGroupStyle.module.css
+++ b/client/src/components/GroupDetail/detailedGroupStyle.module.css
@@ -1,7 +1,7 @@
 .containerGroupDet {
-    margin: 120px auto 100px auto;
-    height: 550px;
-    width: 1200px;
+    margin: 100px auto 100px auto;
+    height: 650px;
+    width: 1000px;
     background-color: black;
     display: flex;
     flex-direction: column;
@@ -12,25 +12,87 @@
 }
 
 .headGroup {
-    padding: 30px;
+    padding: 30px 150px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     font-size: x-large;
+    padding-bottom: 50px;
 }
 
 .imgGameGroup {
     border-radius: 50%;
-
     border: 5px inset rgba(255, 255, 255, 0.82);
 
 }
 
 .usersInGroups {
-    padding: 15px;
+    padding: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .containerGroupDet button {
     color: black;
+}
+
+
+.gameSet {
+    text-align: end;
+}
+
+.gameSet h1 {
+    font-size: 48px;
+    color: #50ddfd;
+    text-shadow: 0 0 7px #5fffec,
+    0 0 10px rgba(95, 255, 255, 0.45),
+    0 0 21px rgba(0, 255, 255, 0.35);
+    padding-bottom: 20px;
+
+}
+
+.gameSet h2 {
+
+    padding-bottom: 20px;
+}
+
+.buttonJoinedGroup {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+
+}
+
+.buttonJoinedGroup button {
+    margin: auto 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: large;
+    height: 50px;
+    width: 200px;
+    color: rgb(162, 162, 162);
+    background-color: rgb(16, 16, 16);
+    border: rgb(0, 0, 0);
+    align-items: center;
+    border-radius: 10px;
+    font-size: medium;
+}
+
+.hiddenLink {
+    /*width: 150px;*/
+    font-size: large;
+    background-color: black;
+    color: #ffffff;
+    border: rgb(0, 0, 0);
+}
+
+.buttonJoinedGroup input {
+    position: absolute;
+    width: 500px;
+    margin-top: 65px;
+    margin-left: -130px;
 }
