--- a/client/src/components/Footer/footerStyles.module.css
+++ b/client/src/components/Footer/footerStyles.module.css
@@ -6,6 +6,7 @@
     background: black;
     display: flex;
     box-shadow: 0px -15px 30px rgba(255, 0, 191, 0.20);
+
 }
 
 
@@ -23,9 +24,11 @@
 }
 
 .icons {
+    align-items: center;
     display: flex;
     width: 15%;
     margin: auto 0 auto;
     justify-content: space-around;
 }
+
 
