--- a/client/src/components/Profileitem/stylesProfItem.module.css
+++ b/client/src/components/Profileitem/stylesProfItem.module.css
@@ -1,3 +1,21 @@
-.avaProf {
-    width: 20px;
+.avaProf img {
+    border-radius: 50%;
+    width: 70px;
+}
+
+.profContainer {
+    display: flex;
+}
+
+.profContainer {
+    padding: 20px 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.profContainer a {
+    font-size: x-large;
+    text-decoration: none;
 }
